[package]
name = "hi-nvim-rs"
version = "0.1.4"
edition = "2021"
description = "(Neo)vim perceptual color scheme compiler"
keywords = ["neovim", "vim", "colorscheme", "theme", "compiler"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomcur/hi-nvim-rs"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
palette = "0.7.6"
palette-gamut-mapping = "0.1.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[workspace]
members = [
    "hi-nvim-rs-web",
    "hi-nvim-rs-web-styler",
]
