[package]
name = "hi-nvim-rs"
version = "0.2.0"
edition = "2021"
description = "(Neo)vim perceptual color scheme compiler"
keywords = ["neovim", "vim", "colorscheme", "theme", "compiler"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomcur/hi-nvim-rs"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
color = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[build-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8" }

[workspace]
members = [
    "hi-nvim-rs-web",
    "hi-nvim-rs-web-styler",
]
