[package]
name = "palette-gamut-mapping"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
description = "Convert colors between color spaces with CSS Color Module Level 4 gamut mapping"
keywords = ["gamut", "palette", "css", "oklab", "oklch"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/tomcur/hi.nvim.rs"

[dependencies]
palette = "0.7"
